# FIDO-Delegation

./: README
androidapp/FIDO_Delegation/: settings.gradle
androidapp/FIDO_Delegation/app/: build.gradle
androidapp/FIDO_Delegation/app/src/androidTest/java/anon/fido/delegation/: ExampleInstrumentedTest.kt
androidapp/FIDO_Delegation/app/src/main/: AndroidManifest.xml
androidapp/FIDO_Delegation/app/src/main/java/anon/fido/delegation/: ASN1ECDSA.kt  DelegatedData.kt  DelegatedFIDOSignature.kt  FidoProfileAdapter.kt  MainActivity.kt  OneTimeMemory.kt  PersistencyManager.kt  VariantConfig.kt
androidapp/FIDO_Delegation/app/src/main/res/drawable/: ic_baseline_add_circle_24.xml
androidapp/FIDO_Delegation/app/src/main/res/layout/: activity_main.xml  row_item.xml  row_item_add.xml
androidapp/FIDO_Delegation/app/src/main/res/raw/: sample
androidapp/FIDO_Delegation/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
androidapp/FIDO_Delegation/app/src/main/res/values-night/: themes.xml
androidapp/FIDO_Delegation/app/src/test/java/anon/fido/delegation/: ExampleUnitTest.kt
androidapp/FIDO_Delegation/gradle/wrapper/: gradle-wrapper.properties
server/python-fido2/: README
server/python-fido2/examples/server/: pyproject.toml
server/python-fido2/examples/server/server/: SoftwareAuthenticator.py  server.py
server/python-fido2/examples/server/server/static/: index.html  profile.html  view.html
server/python-fido2/examples/server/server/static/.well-known/: test.html
server/python-fido2/fido2/: server.py
(+2 files in other folders)
