[tool.poetry]
name = "fido2-example-server"
version = "0.1.0"
description = "Example server for python-fido2"
authors = ["Dain Nilsson <dain@yubico.com>"]
license = "Apache-2"
packages = [
  { include = "server" },
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0"
fido2 = {path = "../.."}
ecpy = "^1.2.5"
pyasn1 = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "server.server:main"
